
** Bug fixes

  cp now correctly copies files with a hole at the end of the file,
  and extents allocated beyond the apparent size of the file.
  That combination resulted in the trailing hole not being reproduced.
  [bug introduced in coreutils-8.10]

  cut --fields no longer outputs extraneous characters on some uClibc configs.
  [bug introduced in coreutils-6.11]

  ls no longer prematurely wraps lines when printing short file names.
  [bug introduced in coreutils-5.1.0]

  shred again uses defined patterns for all iteration counts.
  [bug introduced in coreutils-5.93]

  sort --debug -b now correctly marks the matching extents for keys
  that specify an offset for the first field.
  [bug introduced with the --debug feature in coreutils-8.6]

** New commands

  base32 is added to complement the existing base64 command,
  and encodes and decodes printable text as per RFC 4648.

** New features

  dd now summarizes sizes in --human-readable format too, not just --si.
  E.g., "3441325000 bytes (3.4 GB, 3.2 GiB) copied".  It omits the summaries
  if they would not provide useful information, e.g., "3 bytes copied".
  Its status=progress output now uses the same format as ordinary status,
  perhaps with trailing spaces to erase previous progress output.

  md5sum now supports the --ignore-missing option to allow
  verifying a subset of files given a larger list of checksums.
  This also affects sha1sum, sha224sum, sha256sum, sha384sum and sha512sum.

  printf now supports the '%q' format to print arguments in a form that
  is reusable by most shells, with non-printable characters escaped
  with the POSIX proposed $'...' syntax.

** Changes in behavior

  base64 no longer supports hex or oct --wrap parameters,
  thus better supporting decimals with leading zeros.

  date --iso-8601 now uses +00:00 timezone format rather than +0000.
  The standard states to use this "extended" format throughout a timestamp.

  df now prefers sources towards the root of a device when